2013-12-07  Tobias Brox <t-caldav@tobixen.no>
	* caldav/davclient.py (DAVClient.request, DAVResponse): Full HTTP
	communication is now available in debug logs

	* caldav/davclient.py (DAVClient.__init__): Username and password
	can now (optionally) be given as separate parameters instead of as
	a part of the configuration URL

	* caldav/objects.py: By now it's sufficient to pass the base URL
	while initializing the DAVClient object.  The library will find
	the principal URL and home calendar set URL through GETPROP

	* caldav/objects.py (Calendar): workaround for problem that
	calendar name didn't get set on some (all?) caldav servers.

	* caldav/objects.py (Principal, CalendarSet): created a method
	calendar() to make it easier to generate a calendar object
	(without server-side communication), and make_calendar for
	creating a new calendar at the server side.

	* tests/test_caldav.py: all broken tests have been disabled.
	Temporary made smaller tests to demonstrate what is actually
	working on all caldav servers I've tested against (Zimbra,
	DAViCal, Baikal and SoGo).

	* caldav/objects.py (DAVObject): (internal change) set __str__ and
	__repr__ to make debugging easier

	* caldav/objects.py: (internal change) Since the principal path and the calendar
	home set path are different on most CALDav server implementations,
	a new class CalendarSet has been made.

	* caldav/lib/url.py: (internal change) Complete rewrite and
	API-change. internally all URLs are now handled as objects

	* caldav/objects.py (Principal): (internal change) made it
	possible to set principal.calendar_home_set (hardly useful except
	for from the unit testing code).

	* All files: misc minor changes to reflect all the changes above.

2011-01-22  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/elements/cdav.py (Expand.__init__, 
							   TimeRange.__init__) : Fixed strftime fmt.

2010-10-09  Cyril Robert <cyrilrbt@gmail.com>

	* All files: Made PEP8 compliant 
